--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "bun run ."
 	},
 	"dependencies": {
-		"@buape/carbon": "0.14.0"
+		"@buape/carbon": "^0.0.0-beta-20260216184201"
 	},
 	"devDependencies": {
 		"@types/bun": "1.3.6",
